# PLM

./: LICENSE  README.md
Aisan site/: docker-compose.yml
Aisan site/backend/: .env  Cargo.toml
Aisan site/backend/src/: db.rs  main.rs  routes.rs
Aisan site/backend/src/controllers/: compliance.rs  inspiration.rs  recipe.rs
Aisan site/db/: init.sql
Aisan site/frontend/public/: index.html
Aisan site/frontend/src/: App.jsx  styles.css
Aisan site/frontend/src/ pages/: CompliancePage.jsx
Central_node/: docker-compose.yml
Central_node/backend/: Cargo.toml  Dockerfile
Central_node/backend/src/: config.rs  handlers.rs  main.rs  sync.rs
Central_node/db/: init.sql
Central_node/frontend/: Dockerfile  package-lock.json  package.json
Central_node/frontend/src/: App.css  App.js
Central_node/frontend/src/pages/: CostSimulation.js  RecipeForm.js  RecipeList.js
Central_node/frontend/src/services/: api.js
Central_node/nginx/: nginx.conf
models/: compliance.rs  inspiration.rs  mod.rs  recipe.rs
sub_node/: docker-compose.yml
sub_node/backend/: Cargo.toml  Dockerfile
sub_node/backend/src/: main.rs
sub_node/backend/src/controllers/: compliance.rs  inspiration.rs  mod.rs  recipe.rs
sub_node/backend/src/models/: compliance.rs  inspiration.rs  recipe.rs
sub_node/db/: init.sql
sub_node/frontend/: .env  Dockerfile  package-lock.json  package.json  tailwind.config.js
sub_node/frontend/public/: about.html  add.html  blog.html  home.html  recipe.html  service.html
sub_node/frontend/src/: App.jsx  api.js  index.js
(+17 files in other folders)
