[package]
name = "perfume_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.7"
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
idna = "=1.0"
tokio = { version = "1", features = ["full"] }
